# fastapi-app-template

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
